<package>
  <name>slam_exporter</name>
  <version>1.0.0</version>
  <description>slam_exporter package</description>
  <maintainer email="ros@jochen.sprickerhof.de">Jochen Sprickerhof</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/slam_exporter</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jochen Sprickerhof</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
    <run_depend>tf</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->

</package>
